tests/reference/asr-test_set4-53fea39.stderr
semantic error: Call to set.add must have exactly one argument
 --> tests/errors/test_set4.py:6:5
  |
6 |     a.add(3, 4)
  |     ^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
